# adaption_finger

./: .gitignore  finger.eps  readme.md
adaption_controller/: CMakeLists.txt  package.xml
adaption_controller/src/: finger_controller.cpp  finger_controller_PID.cpp  finger_controller_PID_line.cpp  finger_controller_PID_sin.cpp  impedance_controller.cpp
adaption_finger/: CMakeLists.txt  package.xml  urdf.rviz
adaption_finger/config/: joint_names_adaption_finger.yaml
adaption_finger/launch/: display.launch  finger_simulator.launch  gazebo.launch
adaption_finger/meshes/: base_link.STL  tip_link.STL  upper_link.STL
adaption_finger/urdf/: adaption_finger.urdf  adaption_finger.xacro  adaption_finger_backup.urdf
adaption_launch/: CMakeLists.txt  package.xml
adaption_launch/config/: geo_setup.yaml  geo_setup_imp.yaml  geo_setup_pid.yaml  geo_setup_pid_line.yaml
adaption_launch/launch/: finger_imp.launch  finger_pid.launch  finger_pid_line.launch  finger_simulator.launch
adaption_msgs/: CMakeLists.txt  package.xml
adaption_msgs/msg/: ContactForce.msg  FingerAngle.msg  FingerInfo.msg  JointForce.msg
adaption_simulation/: CMakeLists.txt  package.xml
adaption_simulation/adaption_data/: finger_adaption_2020-04-28-14-19-16.bag  finger_adaption_2020-04-28-15-28-39.bag  finger_adaption_2020-04-28-18-15-38.bag  finger_adaption_2020-04-28-18-48-24.bag  finger_adaption_2020-04-28-19-33-34.bag  finger_adaption_2020-04-28-19-58-47.bag  finger_adaption_2020-04-28-20-03-58.bag  finger_adaption_2020-04-28-20-41-35.bag  finger_adaption_2020-05-05-18-39-27.bag  (+1 more)
(+11 files in other folders)
