<package>
  <name>adaption_launch</name>
  <version>1.0.0</version>
  <description>The finger_adaption_launch package</description>
  <author>Qian Lin</author>
  <maintainer email="qzlinqian@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>roslaunch</build_depend> -->
  <!-- <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend> -->
  <!-- <run_depend>gazebo</run_depend> -->
  <!-- <export> -->
  <!-- </export> -->
</package>